# bricksKV

./: Cargo.toml  README.md
docs/: README_ZH.md
examples/: simple-benchmark.rs
src/: kv.rs  lib.rs
src/kv/: data.rs  index.rs  meta.rs  utils.rs  wal.rs
src/kv/data/: level_page_bitmap.rs
src/kv/data/level_page_bitmap/: page_bitmap.rs
src/kv/index/: bucket.rs  buckets.rs
