[package]
name = "bricksdb"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
bitvec = "1"
boxcar = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
log = "0.4"
zstd = "0.13"
rand = "0.8"
quick_cache = "0.6"
moka = { version = "0.12", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
[dev-dependencies]
tempfile = "3"